--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,17 @@
 version: "3"
 services:
-  web:
-    build: .
-    command: npm start
-    volumes:
-      - .:/usr/app
-    ports:
-      - "3000:3000"
+    web:
+        build: .
+        command: npm start
+        volumes:
+            - .:/usr/app
+        ports:
+            - "3000:3000"
+        depends_on:
+            - db
+    db:
+        image: mongo
+        volumes:
+            - ./data:/data/db
+        ports:
+            - "27017:27017"
