--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "faker": "^5.1.0",
     "mongodb": "^3.6.0",
     "nodemon": "^2.0.4"
   },
